Fixed responsive issues with xs screen size
When rendering main page for xs screen size, I observed few
responsive issues and fixed them:
- Header content was rendered outside of viewing area due to
  bootstrap inner row div
- Header content overlapping with top logo
- Footer showing in multiple lines even though there were
  enough empty spaces both left and right

--- a/client/templates/_shared/headerLogo/headerLogo.less
+++ b/client/templates/_shared/headerLogo/headerLogo.less
@@ -1,3 +1,5 @@
+@import (reference) url('/client/stylesheets/lib/bootstrap/variables.import.less');
+
 .header-logo {
 	position: absolute;
 	top: 10px;
@@ -6,4 +8,12 @@
 	&:hover {
 		cursor: pointer;
 	}
+
+  img {
+    // TODO(jamesjychong): Discuss this with UX team; for now, this fixes overlap problem
+    // when rendering for xs screen size 
+    @media (max-width: @screen-sm-max) {
+      max-height: 30px;
+    }
+  }
 }
